--- a/src/Nfe102/Bundle/RestoBundle/Resources/translations/messages.fr.yml
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/translations/messages.fr.yml
@@ -11,3 +11,5 @@ resto.home.title: Accueil
 resto.about.title: Fonctionnement du site
 resto.contact.title: Contact
 resto.dropdown.title: Mon compte
+
+form.cathegorie.label: Cathegorie
