--- a/src/Nfe102/Bundle/RestoBundle/Resources/translations/messages.fr.yml
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/translations/messages.fr.yml
@@ -12,4 +12,4 @@ resto.about.title: Fonctionnement du site
 resto.contact.title: Contact
 resto.dropdown.title: Mon compte
 
-form.cathegorie.label: Cathegorie
+form.categorie.label: Categorie
